--- a/src/main/resources/args.properties
+++ b/src/main/resources/args.properties
@@ -1,8 +1,5 @@
-db.url=jdbc:mysql://www.notejava.com:3306/blog
-db.username=yaoren
-db.password=yaoren666
-#db.url=jdbc:mysql://localhost:3306/blog
-#db.username=root
-#db.password=12345
+db.url=jdbc:mysql://localhost:3306/blog
+db.username=root
+db.password=12345
 db.validationQuery=select 1
 db.maxActive=20
