--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,17 @@
   <artifactId>blog</artifactId>
   <version>1.0</version>
   <packaging>war</packaging>
-  
+
+	<repositories>
+		<repository>
+			<id>elastic-lucene-snapshots</id>
+			<name>Elastic Lucene Snapshots</name>
+			<url>http://s3.amazonaws.com/download.elasticsearch.org/lucenesnapshots/00142c9</url>
+			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>false</enabled></snapshots>
+		</repository>
+	</repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -61,18 +71,26 @@
 	    <version>19.0</version>
 	</dependency>
 	<!-- 添加lucene支持 -->
-	<dependency>
+	<!--<dependency>
 		<groupId>org.apache.lucene</groupId>
 		<artifactId>lucene-core</artifactId>
 		<version>5.3.1</version>
 	  </dependency>
-	  
+
+
+
 	  <dependency>
 		<groupId>org.apache.lucene</groupId>
 		<artifactId>lucene-analyzers-common</artifactId>
 		<version>5.3.1</version>
-	 </dependency>
-	 
+	 </dependency>-->
+
+	  <dependency>
+		  <groupId>org.apache.lucene</groupId>
+		  <artifactId>lucene-core</artifactId>
+		  <version>7.2.1</version>
+	  </dependency>
+
 	 <dependency>
 		<groupId>org.apache.lucene</groupId>
 		<artifactId>lucene-analyzers-smartcn</artifactId>
@@ -86,7 +104,7 @@
 	    <version>1.8.3</version>
 	</dependency>
 	 
-	 <dependency>
+	 <!--<dependency>
 		<groupId>org.apache.lucene</groupId>
 		<artifactId>lucene-queryparser</artifactId>
 		<version>5.3.1</version>
@@ -96,7 +114,7 @@
 		<groupId>org.apache.lucene</groupId>
 		<artifactId>lucene-highlighter</artifactId>
 		<version>5.3.1</version>
-	</dependency>
+	</dependency>-->
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 	<dependency>
@@ -104,6 +122,32 @@
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.5</version>
 	</dependency>
+
+	  <dependency>
+		  <groupId>org.elasticsearch.client</groupId>
+		  <artifactId>transport</artifactId>
+		  <version>6.2.4</version>
+	  </dependency>
+
+	  <dependency>
+		  <groupId>org.apache.logging.log4j</groupId>
+		  <artifactId>log4j-core</artifactId>
+		  <version>2.9.1</version>
+	  </dependency>
+
+	  <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+	  <dependency>
+		  <groupId>com.alibaba</groupId>
+		  <artifactId>fastjson</artifactId>
+		  <version>1.2.47</version>
+	  </dependency>
+
+	  <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+	  <dependency>
+		  <groupId>org.jsoup</groupId>
+		  <artifactId>jsoup</artifactId>
+		  <version>1.11.3</version>
+	  </dependency>
 
   </dependencies>
 	<build>
@@ -117,6 +161,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
